--- a/index.css
+++ b/index.css
@@ -11,35 +11,41 @@ h3  {
     color:white;
 }
 
-#left {
+#left, #right{
+    float: right;
+    padding-left:40px;
+    padding-top:40px;   
+    padding-bottom:40px; 
     display:flex;
     flex-direction:column;
-    justify-content: center;
-    margin:80px;
+
 
 }
 
-#right {
-    display:flex;
+.group {
+    float: left;
+    margin-top:30px;
+    margin-left:300px;
+    padding-left:200px;
     flex-direction:column;
-    justify-content: center;
-    /*margin:80px;*/
-
 }
 
 #image1 {
     height:400px;
     width:400px;
+    padding-bottom:40px; 
 }
 
 #image2 {
     height:400px;
     width:400px;
+    
 }
 
 #image3 {
     height:400px;
     width:400px;
+    padding-bottom:40px; 
 }
 
 #image4 {
